--- a/app/docs_n_records/master_list/edit/edit.scss
+++ b/app/docs_n_records/master_list/edit/edit.scss
@@ -39,5 +39,13 @@
       border-top: 1px solid #f0f0f0;
       border-bottom: 1px solid #f0f0f0;
     }
+
+    .modal-content{
+      top:72px;
+    }
   }
+}
+
+[class="modal-backdrop in"]{
+  display:none;
 }
